# Ai_Video_Editor

./: .gitignore  README.md  app.py  app_local.py  main.py  pyproject.toml
notebooks/: deepgram_trial.py  llm_calls.py  mvp_flow.py  transcript_analysis.py  trim copy.py  trim-fastest-inaccurate.py  trim.py  ui1.py  ui_transcript_select.py  video_trim.py
src/api/: fetch.py  invalids.py  process_all.py  status.py  transcribe.py  transcript.py  trim.py  upload_file.py
src/llm/: llm.py  prompt.py
src/models/: invalid_model.py  metadata_model.py  project_status.py  response_model.py
src/transcribe/: deepgram_transcriber.py  whisper_transcriber.py
src/utils/: constants.py  enums.py  json_parser.py  transcript_format.py  video_trimmer.py
