[project]
name = "ai-video-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepgram-sdk>=3.10.1",
    "ffmpeg>=1.4",
    "jupyter>=1.1.1",
    "litellm>=1.65.7",
    "moviepy>=2.1.2",
    "openai-whisper>=20240930",
    "pyqt5>=5.15.11",
    "pyside6>=6.9.0",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.1",
]
